fix : letter-spacing in index

--- a/src/index.css
+++ b/src/index.css
@@ -32,7 +32,7 @@ body {
   transition: 0.3s ease;
   background-color: var(--color-body-bg);
   color: var(--color-text);
-  letter-spacing: 0.07em;
+  letter-spacing: 0.01em;
 }
 
 code {
